--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -18,6 +18,7 @@ html{
     left: 0;
     z-index: 99;
 }
+
 .contenedor-header header{
     max-width: 1100px;
     margin: auto;
@@ -26,16 +27,35 @@ html{
     align-items: center;
     padding: 15px 20px;
 }
+
+.contenedor-header header .logo{
+    font-size: 3erm;
+    color: var(--text-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.contenedor-header header .logo:hover{
+    transform: scale(1.1);
+}
+
+.contenedor-header header .logo span{
+    text-shadow: 0 0 25px var(--main-color);
+}
+
 .contenedor-header header .logo a{
-    font-family: 'Righteous';
+    font-weight: 500;
     font-size: 36px;
     color: #b61c1c;
     text-decoration: none;
 }
+
 .contenedor-header header ul{
     display: flex;
     list-style: none;
 }
+
 .contenedor-header header nav ul li a{
     text-align: none;
     color: #fff;
@@ -57,8 +77,7 @@ html{
 }
 /* SECCION I N I C I O */
 .inicio{
-    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(img/Fondo.png);
+    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),url(img/Fondo.gif);
     background-size: cover;
     height: 100vh;
     color: #fff;
@@ -73,14 +92,31 @@ html{
     text-align: center;
     border-radius: 40px;
 }
+
 .inicio .contenido-banner img{
     margin-top: 40px;
-    border: 5px solid #5f0707;
+    border-radius: 50%;
     display: block;
     width: 80%;
     margin: auto;
     border-radius: 100%;
 }
+
+.inicio.contenido-banner img img{
+border-radius: 50%;
+box-shadow: 0 0 25 rgb(150, 16, 16);
+cursor: pointer;
+transition: 0.4s ease-in-out;
+}
+
+.inicio .contenido-banner img img:hover{
+    position: relative;
+    top: 3erm;
+    width: 32vw;
+    border-radius: 50%;
+    
+}
+
 .inicio .contenido-banner h1{
     margin-top: 40px;
     font-size: 42px;
@@ -885,7 +921,7 @@ html{
 }
 /* SECCION CONTACTO */
 .contacto{
-    background-image: url(img/contact_bg.png);
+    background-image: url(img\Fondo.png);
     background-color: #1e2326;
     color: #fff;
     padding: 50px 0;
